[package]
name = "mobc-redis"
version = "0.5.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Redis support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc-redis"
keywords = ["postgres", "pool", "database", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = "0.5"
redis = "0.14.0"

[dev-dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-http = "1.0"
tokio = { version = "0.2", features = ["full"] }