[package]
name = "mobc-redis"
version = "0.7.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Redis support for the mobc connection pool"
repository = "https://github.com/importcjj/mobc-redis"
keywords = ["postgres", "pool", "database", "async", "await"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = "0.7"
redis = { version = "0.21", features = ["aio"] }

[dev-dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
actix-http = "3.0.4"
tokio = { version = "1.17.0", features = ["full"] }

[features]
tokio-comp = ["redis/tokio-comp"]
async-std-comp = ["redis/async-std-comp"]